--- a/app/templates/article.html
+++ b/app/templates/article.html
@@ -4,11 +4,49 @@
 
 <div class="container-fluid landing">
     <div class="row">
+        <p>
         <h1>{{ article.title }}</h1>
+
+        </p>
+    <br>
+
     </div>
+
     <div class="row">
+            <div class="col-md-4 d-flex justify-content-center">
+                <div class="card mb-3 bg-dark text-white">
+
+        <img src="{{ url_for('static', filename= article.img ) }}" class="card-img image-fluid" alt="...">
+    </div>
+
+
+            </div>
+    </div>
+
+
+        <br>
+            <p>{{ article.p_date }}</p>
+            <p>{{ article.tag }}</p>
+
+
+
+            <br>
+
+        <div class="row">
+
+            <h3>{{ article.desc }}</h3>
+
+    </div>
+
+    <br>
+
+        <br>
+
+    <div class="row">
+
         <p>{{ article.content }}</p>
     </div>
-</div>
+
+    </div>
 
 {% endblock %}
