--- a/app/templates/home2.html
+++ b/app/templates/home2.html
@@ -5,27 +5,74 @@
 <div class="container-fluid landing">
 <h1>{{ title }}</h1>
     <div class="row">
-        {% for article in articles %}
-            <div class="col-md-4 d-flex justify-content-center">
-                <div class="card mb-3 bg-dark text-white">
+
+<form action="/new_story/" method="post" enctype="multipart/form-data">
+
+  <label for="title">Title:</label><br>
+  <input type="text" id="title" name="title" size="50"><br><br>
 
 
-                    <img src="{{ url_for('static', filename= article.img ) }}" class="card-img image-fluid" alt="...">
-                    <div class="card-body">
-<!--                        <a href="{{ article.url }}"> -->
-                        <a href="/article/{{ article.id }}">
-                            <h2 class="card-title"><b> {{ article.title }} </b></h2>
-                        </a>
-                        <p class="card-text">{{ article.desc }}</p>
-                        <p class="card-text"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: ;msFilter:;"><path d="M12 2C6.579 2 2 6.579 2 12s4.579 10 10 10 10-4.579 10-10S17.421 2 12 2zm0 5c1.727 0 3 1.272 3 3s-1.273 3-3 3c-1.726 0-3-1.272-3-3s1.274-3 3-3zm-5.106 9.772c.897-1.32 2.393-2.2 4.106-2.2h2c1.714 0 3.209.88 4.106 2.2C15.828 18.14 14.015 19 12 19s-3.828-.86-5.106-2.228z"></path></svg> Author: {{ article.author }}</p>
-                    </div>
-                    <div class="card-footer">
-                        <p class="card-text published"><svg class="p-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: ;msFilter:;"><path d="M12 5c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm0 14c-3.309 0-6-2.691-6-6s2.691-6 6-6 6 2.691 6 6-2.691 6-6 6z"></path><path d="M11 9h2v5h-2zM9 2h6v2H9zm10.293 5.707-2-2 1.414-1.414 2 2z"></path></svg> Date Published: {{ article.p_date }}</p>
-                        <p class="card-text published"><path d="M11 9h2v5h-2zM9 2h6v2H9zm10.293 5.707-2-2 1.414-1.414 2 2z"></path> Tag:  <a href="/tags/{{ article.tag }}">{{ article.tag }}</a>    </p>
-                    </div>
-                </div>
-            </div>
-        {% endfor %}
+  <label for="desc">Article Description:</label><br>
+  <input type="text" id="desc" name="desc" size="50"><br><br>
+
+    <label for="author">Author:</label><br>
+  <input type="text" id="author" name="author" size="50"><br><br>
+
+  <label for="desc">Article Description:</label><br>
+    <textarea name="desc" rows="2" cols="120">
+    Description one liner here.
+    </textarea>
+<br>
+<br>
+
+  <label for="content">content:</label><br>
+    <textarea name="content" rows="10" cols="120">
+    Article content here.
+    </textarea>
+<br>
+<br>
+
+
+  <label for="file">Select Image:</label>
+  <input type="file" id="file" name="file">
+    <br><br>
+
+    <label for="publisher">Which Publication?:</label>
+    <select id="publisher" name="publisher">
+            {% for pub in allowed_pubs %}
+              <option value="{{ pub.id }}">{{ pub.name }}</option>
+            {% endfor %}
+    </select>
+
+    <br><br>
+
+
+    <label for="tags">Choose Tags (you can select multiple):</label>
+   <select name="tags" id="tags" multiple size="9">
+             {% for tg in tags %}
+              <option value="{{ tg.tag }}">{{ tg.tag }}</option>
+            {% endfor %}
+  </select>
+  <br><br>
+
+
+
+  <input type="submit" value="Submit">
+</form>
+
+
+
+
+<!--
+                title="Who Let The Dogs Out?",
+        desc="have we yet discovered who let the dogs out?",
+        author="Lance Armstrong",
+        img="/assets/img/1.jpg",
+        p_date="2022-11-11 11:11:11",
+        content="It was I",
+        pub_id=1,
+
+-->
     </div>
 </div>
 
